MtBdd and ImmutableBitSet improvements. (#4)